--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ h1, h2{
 #menu li {
     float: left;
     list-style-type: none;
-    margin-right: 30px;
+    margin-right: 15px;
 }
 
 #menu a {
@@ -56,5 +56,13 @@ h1, h2{
 
 .active {
     background-color: rgba(194, 214, 206, 0.7);
+}
+
+                                                        /*Vegan-Image*/
+#vegan-image {
+    width: 100%;
+    height: 600px;
+    overflow: hidden;
+    display: block;
 }
 
