--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,21 +48,23 @@ h1, h2{
 #menu a {
     text-decoration: none;
     color: inherit;
+    padding: 10px;
 }
 
 #menu a:hover {
-    background-color: rgba(194, 214, 206, 0.7);
+    background-color: rgba(194, 214, 206, 0.5);
+    border-radius: 5px;
 }
 
 .active {
-    background-color: rgba(194, 214, 206, 0.7);
+    background-color: rgba(194, 214, 206, 0.5);
+    border-radius: 5px;
 }
 
                                                         /*Vegan-Image*/
 #vegan-image {
     width: 100%;
     height: 600px;
-    overflow: hidden;
-    display: block;
+    background: url(../images/veganlife.jpg) no-repeat center center;
 }
 
