--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,8 @@ h1, h2{
 #logo {
     float: left;
     font-size: 200%;
+    margin-left: 20px;
+    text-transform: uppercase;
 }
 
                                                 /*Menu*/
@@ -61,10 +63,27 @@ h1, h2{
     border-radius: 5px;
 }
 
-                                                        /*Vegan-Image*/
+                                                        /*Vegan-Image and Cover text*/
+#vegan-outer {
+    position: relative;
+}
+
 #vegan-image {
     width: 100%;
     height: 600px;
     background: url(../images/veganlife.jpg) no-repeat center center;
+    background-size: cover;
+    overflow: hidden;
+}
+
+#cover-text {
+    padding: 10px;
+    width: 800px;
+    height: auto;
+    background-color: rgba(44, 65, 56, 0.5);
+    text-align: center;
+    position: absolute;
+    right: 50px;
+    bottom: 300px;
 }
 
