Added structure, image ad placeholder text for motivation div.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat:wght@300;400&family=Oswald:wght@300;600&display=swap');
 
-* {
+html, body {
     margin: 0;
     padding: 0;
-    border: none;
 }
 
 body {
@@ -103,6 +102,9 @@ h1, h2{
 
 #about-text {
     text-align: center;
+    width: 50%;
+    display: block;
+    margin: 0 auto;
 }
 
 #about-text h1 {
@@ -112,7 +114,7 @@ h1, h2{
 }
 
 #info-links {
-    margin: 100px;
+    margin: 50px 200px;
 }
 
 #info-links div {
@@ -129,8 +131,45 @@ h1, h2{
     margin: 0 auto;
 }
 
-#info-links h2 {
+#info-links h4 {
     text-align: center;
+    font-size: 110%;
+    letter-spacing: 3px;
     text-transform: uppercase;
     padding-top: 20px;
+}
+
+#info-links a {
+    color: inherit;
+    padding: 10px;
+    text-decoration: none;
+}
+
+#info-links a:hover {
+    background-color: rgba(194, 214, 206, 0.5);
+    border-radius: 5px;
+}
+
+/* vegan life motivation section */
+
+#motivation-info {
+    height: 600px;
+    width: 100%;
+}
+
+#motivation-info-image {
+    float: left;
+    width: 50%;
+    text-align: center;
+
+}
+
+#motivation-info-image img {
+    height: 600px;
+}
+
+
+#motivation-info-text {
+    float: right;
+    width: 50%;
 }
