--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@ body {
     color: #4b5054;
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+
 /*Heading and Logo*/
                                                 
 header {
@@ -71,9 +75,18 @@ h1, h2{
     border-radius: 5px;
 }
 
-.active {
+/* #menu a:active {
     background-color: rgba(194, 214, 206, 0.5);
     border-radius: 5px;
+}
+/* .active {
+    background-color: rgba(194, 214, 206, 0.5);
+    border-radius: 5px;
+}*/
+
+.spacing-under-nav {
+    position: relative;
+    top: -100px;
 }
 
 /*Vegan-Image and Cover text*/
@@ -93,7 +106,7 @@ h1, h2{
     background-size: cover;
 }
 
-#cover-text h1 {
+#cover-text h2 {
     color: white;
     font-size: 180%;
     text-transform: uppercase;
@@ -125,7 +138,7 @@ h1, h2{
     line-height: 30px;
 }
 
-#about-text h1 {
+#about-text h2 {
     text-transform: uppercase;
     
 }
@@ -196,12 +209,12 @@ h1, h2{
 
 .content-text-right {
     text-align: justify;
-    padding: 50px 100px 50px 0;
+    padding: 50px 200px 50px 0;
 }
 
 .content-text-left {
     text-align: justify;
-    padding: 50px 0px 50px 100px;
+    padding: 50px 0px 50px 200px;
 }
 
 .content-text-left h2 {
@@ -247,7 +260,7 @@ position: relative;
 }
 
 .text-input {
-    width: 75%;
+    width: 90%;
     border: 1px solid white;
     padding: 10px;
     margin: 5px 0 20px 0;
@@ -299,7 +312,7 @@ footer {
 
 /* media queries */
 
-/* For larger to medium screens size  from 1200px wide and down */
+/* For larger to medium screens size from 1200px wide and down */
 
 @media screen and (max-width: 1200px) {
 
@@ -328,7 +341,7 @@ footer {
         padding-top: 0
     }
 
-    #cover-text h1 {
+    #cover-text h2 {
         font-size: 160%;
     }
 
@@ -356,7 +369,7 @@ footer {
 
 @media screen and (max-width: 950px) {
 
-    #about-text h1 {
+    #about-text h2 {
         line-height: 40px;
 
     }
@@ -391,7 +404,7 @@ footer {
         padding: 5px;
     }
 
-    #cover-text h1 {
+    #cover-text h2 {
         font-size: 140%;
     }
 
