--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,13 +193,13 @@ h1, h2{
     
 }
 
-#info-links a {
+#info-links h4 {
     color: inherit;
     padding: 10px;
     text-decoration: none;
 }
 
-#info-links a:hover {
+#info-links h4:hover {
     background-color: rgba(194, 214, 206, 0.5);
     border-radius: 5px;
 }
@@ -252,18 +252,11 @@ h1, h2{
 /*Form section*/
 
 #form-outer {
-height: 600px;
-width: 100%;
-background-color: gray;
-position: relative;
-}
-
-#myvideo {
-    height: 600px;
     width: 100%;
+    position: relative;
 }
 
-#myvideo video {
+video {
     height: 600px;
     width: 100%;
     object-fit: cover;
@@ -273,7 +266,7 @@ position: relative;
     position: absolute;
     right: 10%;
     bottom: 10%;
-    background-color: rgba(194, 214, 206, 0.5);
+    background-color: rgba(194, 214, 206, 0.9);
     max-width: 400px;
     padding: 20px;
     margin: 20px;
@@ -291,26 +284,28 @@ position: relative;
 
 }
 
-#suggestion {
+#textarea {
     border: 1px solid white;
     padding: 10px;
-    margin: 5px 0 20px 0;
+    margin: 5px 0 0 0;
+    width: 90%;
+    height: 100px;
 }
 
 #checkbox {
     border: 1px solid white;
-    padding: 10px;
-    margin: 5px 0 20px 0;
+    font-size: 14px; 
 }
 
 .contribute-button {
     padding: 5px 20px;
-    background-color: rgba(194, 214, 206, 0.5);
+    background-color: white;
     font-size: 100%;
     text-align: center;
     border-radius: 4px;
     color: #4b5054;
     border: none;
+    display: block;
 }
 
 /* footer */
@@ -336,9 +331,9 @@ footer {
 
 /* media queries */
 
-/* For larger to medium screens size from 1200px wide and down */
+/* For small screens/laptops size from 1024px wide and down */
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1024px) {
 
     #about-outer {
 
@@ -355,9 +350,7 @@ footer {
     }
 
     #pose-links div {
-        clear: both;
-        width: 100%;
-        float: left;
+        width: 50%;
         padding: 0;
     }
 
@@ -389,9 +382,9 @@ footer {
 
 }
 
-/* For medium screen sizes from 950px wide and down */
+/* For iPad/tablet sizes from 768px wide and down */
 
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 768px) {
 
     #about-text h2 {
         line-height: 40px;
@@ -439,6 +432,28 @@ footer {
         position: absolute;
         left: 0px;
         bottom: 50px;
+    }
+
+    .vegan-images {
+        height: 150px;
+        width: 150px;
+        }
+
+    #contribute-form {
+        left: 0;
+        bottom: 5px;
+        margin: 0;
+        max-width: 300px;
+    }   
+
+    /* For mobile device sizes from 480px wide and down */
+@media screen and (max-width: 480px) {
+
+    #pose-links div {
+        clear: both;
+        width: 100%;
+        float: left;
+        padding: 0;
     }
 }
                                                             
