Center cover text for tablet and mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,8 +346,11 @@ footer {
         font-size: 160%;
     }
 
-    #about-outer {
+    #cover-text {
+        width: 300px;
+    }
 
+    #about-outer {
         width: 70%;
         margin: 0 auto;
     }
@@ -393,11 +396,6 @@ footer {
 
 @media screen and (max-width: 768px) {
 
-    #about-text h2 {
-        line-height: 40px;
-
-    }
-
     #logo {
         margin-bottom: 0;
     }
@@ -434,17 +432,22 @@ footer {
 
     #cover-text {
         padding: 10px;
-        width: 300px;
         height: auto;
-        position: absolute;
-        left: 0px;
-        bottom: 50px;
+        left: 0;
+        right: 0;
+        bottom: 5%;
+        margin: auto;
+    }  
+
+    #about-text h2 {
+        line-height: 40px;
+
     }
 
     .vegan-images {
         height: 150px;
         width: 150px;
-        }
+    }  
 
     #contribute-form {
         top: 5%;
@@ -458,6 +461,13 @@ footer {
 
     /* For mobile device sizes from 480px wide and down */
 @media screen and (max-width: 480px) {
+
+    #cover-text {
+        left: 0;
+        right: 0;
+        bottom: 5%;
+        margin: auto;
+    } 
 
     #pose-links div {
         clear: both;
