added box shadow to border and reduced margins.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ h1, h2{
 #logo {
     float: left;
     font-size: 200%;
-    margin-left: 20px;
+    margin: 0 0 0 20px;
     text-transform: uppercase;
 }
 
@@ -55,6 +55,7 @@ h1, h2{
 }
 
 #menu ul {
+    margin: 0;
     float: right;
 }
 
@@ -120,7 +121,7 @@ h1, h2{
     height: 600px;
     width: 100%;
     overflow: hidden;
-    margin-top: 120px;
+    margin-top: 75px;
 }
 
 #vegan-image {
