--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -524,8 +524,7 @@ footer {
 @media screen and (max-width: 480px) {
 
     #menu {
-        font-size: 65%;
-        font-weight: 600;
+        font-size: 50%;
     }
 
     #logo {
@@ -557,7 +556,7 @@ footer {
 
     .content-image img {
         width: 300px;
-        height: 300px;
+        height: auto;
     }
 
     .social-networks i {
@@ -577,4 +576,4 @@ footer {
         padding: 4px;
     }
 }
-                                                            
+                                                      
