--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ header {
     margin-top: 75px;
 }
 
-#vegan-image {
+#vegan-images {
     width: 100%;
     height: 600px;
     background: url(../images/veganlife.jpg) no-repeat center center;
@@ -426,7 +426,7 @@ footer {
     }
 
     #pose-links h4 {
-        padding-top: 0
+        padding-top: 0;
     }
         
     .column {
@@ -435,6 +435,7 @@ footer {
 
     .content-image {
         padding: 50px 0 0 0;
+      
     }
     
     .content-image img {
@@ -511,8 +512,8 @@ footer {
     }
 
     .vegan-images {
+        width: 150px; 
         height: 150px;
-        width: 150px;
     }  
 
     #contribute-form {
@@ -521,10 +522,12 @@ footer {
 }
 
 /* For mobile device sizes from 480px wide and down */
+
 @media screen and (max-width: 480px) {
 
     #menu {
-        font-size: 50%;
+        font-size: 65%;
+        font-weight: 600;
     }
 
     #logo {
@@ -532,7 +535,7 @@ footer {
     }
 
     #logo, #menu {
-        margin-left: 10px;
+        margin-left: 8px;
         line-height: 30px;
     }
 
@@ -556,7 +559,7 @@ footer {
 
     .content-image img {
         width: 300px;
-        height: auto;
+        height: 300px;
     }
 
     .social-networks i {
@@ -566,6 +569,7 @@ footer {
 }
 
 /* For mobile device sizes from 320px wide and down */
+
 @media screen and (max-width: 320px) {
     
     #menu {
