--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ header {
     z-index: 3;
     box-shadow: 0 -20px 30px #000;
 
-}                                                
+}  
 
 #logo {
     float: left;
@@ -168,11 +168,12 @@ header {
 }
 
 #info-links {
-    margin: 50px 150px;
+    width: 100%;
+    display: block;
 }
 
 #info-links div {
-    width: 25%;
+    width: 100%;
     float: left;
 }
 
@@ -210,7 +211,7 @@ header {
     max-width: 1200px; 
     padding: 20px 0;
     margin: 0 auto;
-}                                                     
+}  
 
 .green-background {
     background-color: #e1eae7;
@@ -461,7 +462,7 @@ footer {
 
 
 @media screen and (max-width: 768px) {
-    
+
     #logo {
         margin-bottom: 0;
         margin-top: 10px;
@@ -516,7 +517,7 @@ footer {
         width: 150px; 
         height: 150px;
         
-    }  
+    } 
 
     #contribute-form {
         max-width: 300px;
@@ -579,6 +580,18 @@ footer {
     
     #menu a {
         padding: 4px;
+    }
+}
+@media screen and (min-width: 1025px) {
+    #info-links div {
+        width: 25%;
+        float: left;
+    }
+}
+@media screen and (min-width: 769px) {
+    #info-links div {
+        width: 50%;
+        float: left;
     }
 }
 
